Adding Intro folder

--- a/index.html
+++ b/index.html
@@ -7,36 +7,44 @@
 
   <body>
     <h1>Arcade Intro</h1>
-    <h2>The Journey Begins</h2>
     <ol>
-      <li><a href="./TheJourneyBegins/add.js">add</a></li>
-      <li><a href="./TheJourneyBegins/centuryFromYear.js">centuryFromYear</a></li>
-      <li><a href="./TheJourneyBegins/checkPalindrome.js">checkPalindrome</a></li>
+      <h2>The Journey Begins</h2>
+      <li><a href="./Intro/TheJourneyBegins/add.js">add</a></li>
+      <li><a href="./Intro/TheJourneyBegins/centuryFromYear.js">centuryFromYear</a></li>
+      <li><a href="./Intro/TheJourneyBegins/checkPalindrome.js">checkPalindrome</a></li>
 
 
     <h2>Edge of the Ocean</h2>
 
-      <li><a href="./EdgeOfTheOcean/adjacentElementsProduct.js">adjacentElementsProduct</a></li>
-      <li><a href="./EdgeOfTheOcean/shapeArea.js">shapeArea</a></li>
-      <li><a href="./EdgeOfTheOcean/makeArrayConsecutive2.js">makeArrayConsecutive2</a></li>
-      <li><a href="./EdgeOfTheOcean/almostIncreasingSequence.js">almostIncreasingSequence</a></li>
-      <li><a href="./EdgeOfTheOcean/matrixElementsSum.js">matrixElementsSum</a></li>
+      <li><a href="./Intro/EdgeOfTheOcean/adjacentElementsProduct.js">adjacentElementsProduct</a></li>
+      <li><a href="./Intro/EdgeOfTheOcean/shapeArea.js">shapeArea</a></li>
+      <li><a href="./Intro/EdgeOfTheOcean/makeArrayConsecutive2.js">makeArrayConsecutive2</a></li>
+      <li><a href="./Intro/EdgeOfTheOcean/almostIncreasingSequence.js">almostIncreasingSequence</a></li>
+      <li><a href="./Intro/EdgeOfTheOcean/matrixElementsSum.js">matrixElementsSum</a></li>
 
 
     <h2>Smooth Sailing</h2>
 
-      <li><a href="./SmoothSailing/AllLongestStrings.js">AllLongestStrings</a></li>
-      <li><a href="./SmoothSailing/commonCharacterCount.js">commonCharacterCount</a></li>
-      <li><a href="./SmoothSailing/isLucky.js">isLucky</a></li>
-      <li><a href="./SmoothSailing/sortByHeight.js">sortByHeight</a></li>
-      <li><a href="./SmoothSailing/reverseInParentheses.js">reverseInParentheses</a></li>
+      <li><a href="./Intro/SmoothSailing/AllLongestStrings.js">AllLongestStrings</a></li>
+      <li><a href="./Intro/SmoothSailing/commonCharacterCount.js">commonCharacterCount</a></li>
+      <li><a href="./Intro/SmoothSailing/isLucky.js">isLucky</a></li>
+      <li><a href="./Intro/SmoothSailing/sortByHeight.js">sortByHeight</a></li>
+      <li><a href="./Intro/SmoothSailing/reverseInParentheses.js">reverseInParentheses</a></li>
 
     <h2>Exploring the Waters</h2>
 
-      <li><a href="./ExploringTheWaters/addBorder.js">addBorder</a></li>
-      <li><a href="./ExploringTheWaters/alternatingSums.js">alternatingSums</a></li>
-      <li><a href="./ExploringTheWaters/areSimilar.js">areSimilar</a></li>
+      <li><a href="./Intro/ExploringTheWaters/addBorder.js">addBorder</a></li>
+      <li><a href="./Intro/ExploringTheWaters/alternatingSums.js">alternatingSums</a></li>
+      <li><a href="./Intro/ExploringTheWaters/areSimilar.js">areSimilar</a></li>
 
+    </ol>
+
+    <h1>Arcade The Core</h1>
+    <ol>
+      <h2>Intro Gates</h2>
+      <li><a href="./TheCore/IntroGates/addTwoDigits.js">addTwoDigits</a></li>
+      <li><a href="./TheCore/IntroGates/largestNumber.js">largestNumber</a></li>
+      <li><a href="./TheCore/IntroGates/candies.js">candies</a></li>
     </ol>
   </body>
 </html>
